--- a/src/App.css
+++ b/src/App.css
@@ -159,4 +159,49 @@
     padding-left: 20px;
 }
 
+.sorter-options-container{
+  width: 150px;
+  margin-top: s10px;
+  position: absolute;
 
+}
+.sorter-options{
+  background-color: #ffffff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 8px 20px 4px #c5c5c5;
+  box-shadow: 1px 3px 20px 0px #c5c5c5;
+}
+
+
+.sorter-options li {
+  list-style: none;
+  text-align: center;
+  margin: 0;
+  height: 20px;
+  padding-top: 5px;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.sorter-options ul{
+  margin: 0;
+  padding: 0;
+}
+
+.sorter-options ul li:hover{
+  background-color: #F0F0F0;
+}
+
+.fa .fa-caret-up{
+  font-size: 100px;
+}
+#sorter-arrow-up {
+  font-size: 30px;
+  color: white;
+  padding: 0;
+  margin: 0;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20px;
+}
