--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,8 @@
     float: left;
     padding-top: 10px;
     padding-left: 20px;
+    overflow: hidden;
+    height: 15px;
 }
 
 .sorter-options-container{
@@ -204,4 +206,22 @@
   margin-left: auto;
   margin-right: auto;
   width: 20px;
+}
+
+
+/*pagenate*/
+
+#pagenate-arrow{
+  font-size: 30px;
+  color: white;
+  padding: 0;
+  margin: 0;
+  height: 20px;
+  margin-top: -10px;
+  width: 20px;
+  margin-left: 15px;
+}
+
+#pagenate-options{
+  width: 100px;
 }
