--- a/src/App.css
+++ b/src/App.css
@@ -161,11 +161,43 @@
     height: 15px;
 }
 
+.fade-in{
+   animation: fade-in 0.2s ease-in forwards;
+  transition:opacity 300ms ease-out
+  }
+
+.fade-out{
+  animation: fade-out 0.2s ease-in forwards;
+  transition:opacity 300ms ease-out
+}
+
+@keyframes fade-in{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes fade-out{
+  from{
+
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 .sorter-options-container{
   width: 150px;
-  margin-top: s10px;
+  margin-top: 10px;
   position: absolute;
-
+  opacity:0;
+  visibility: hidden;
 }
 .sorter-options{
   background-color: #ffffff;
@@ -208,6 +240,9 @@
   width: 20px;
 }
 
+#sorter-arrow-toggle{
+  margin-left: 5px;
+}
 
 /*pagenate*/
 
