--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,40 @@
 
+/* Animations */
+
+.fade-in{
+  animation: fade-in 0.2s ease-in forwards;
+ transition:opacity 300ms ease-out
+ }
+
+.fade-out{
+ animation: fade-out 0.2s ease-in forwards;
+ transition:opacity 300ms ease-out
+}
+
+@keyframes fade-in{
+ from{
+   opacity: 0;
+ }
+ to{
+   opacity: 1;
+   visibility: visible;
+ }
+}
+
+@keyframes fade-out{
+ from{
+
+   opacity: 1;
+ }
+ to{
+   opacity: 0;
+   visibility: hidden;
+ }
+}
+
+/* Animations  END */
+
+
 .navigation{
   width: 100%;
   height: 50px;
@@ -161,36 +197,7 @@
     height: 15px;
 }
 
-.fade-in{
-   animation: fade-in 0.2s ease-in forwards;
-  transition:opacity 300ms ease-out
-  }
 
-.fade-out{
-  animation: fade-out 0.2s ease-in forwards;
-  transition:opacity 300ms ease-out
-}
-
-@keyframes fade-in{
-  from{
-    opacity: 0;
-  }
-  to{
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
-@keyframes fade-out{
-  from{
-
-    opacity: 1;
-  }
-  to{
-    opacity: 0;
-    visibility: hidden;
-  }
-}
 
 .sorter-options-container{
   width: 150px;
@@ -240,8 +247,15 @@
   width: 20px;
 }
 
+#sorter-tag{
+  width: 70px;
+  text-align: center;
+}
+
 #sorter-arrow-toggle{
   margin-left: 5px;
+  bottom: 5px;
+  position: relative;
 }
 
 /*pagenate*/
@@ -259,4 +273,12 @@
 
 #pagenate-options{
   width: 100px;
+}
+
+
+#pagenation-arrow-toggle{
+  margin-left: 5px;
+  float: right;
+  bottom: 5px;
+  position: relative;
 }
