--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@
   margin-right: auto;
   padding-top: 50px;
   min-width: 845px;
+  padding-bottom: 100px;
 }
 
 
@@ -201,7 +202,27 @@
 .no-addresses h1{
   margin: 0;
   font-size: 20px;
-  color: #292653;
+  color: #45328e;
+}
+
+.no-addresses input{
+  width: 100px;
+  margin-left: 15px;
+  height: 25px;
+  font-size: 20px;
+}
+
+
+.no-addresses button{
+  margin-top: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  margin-right: 10px;
+  color: white;
+  height: 35px;
+  border: 1px solid #d4d4d4;
+  background-color: #5de0a3;
+  border-radius: 3px;
 }
 .contact{
   height: 32px;
@@ -309,3 +330,7 @@
   bottom: 5px;
   position: relative;
 }
+
+
+
+
