--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,12 @@
   display: block;
 }
 
+.sorter-toggable{
+  width: 95px;
+  height: 18px;
+  cursor: pointer;
+}
+
 .nav-right{
   height: 1px;
   float: right;
